[gd_scene load_steps=2 format=3 uid="uid://luv5eaqrs8r2"]

[ext_resource type="Script" path="res://addons/vmflib/examples/Example2.gd" id="1"]

[node name="Example2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Generate a single cube:"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Click Me"
script = ExtResource("1")

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Your VMF is at %appdata%/Godot/NameOfProjectHere/output.vmf"

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Show VMF"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="CenterContainer/VBoxContainer/Button" method="_on_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button2" to="CenterContainer/VBoxContainer/Button" method="_on_Button2_pressed"]
